# starVLA

./: .deepspeed_env  .gitignore  README.md  deploy.py  error_log.txt  main.py  pyproject.toml  pyrightconfig.json  readme-deployment.md  requirements.txt  requirements.txt.bak2
.bar/: agrument.py  train_qwen_qformer_dit.py
InternVLA/config/lerobot_data/: qwenvla_cotrain_oxe.yaml
InternVLA/config/training/: internvla_cotrain_custom.yaml  internvla_cotrain_libero.yaml  internvla_cotrain_oxe.yaml  qwenvla_cotrain_libero.yaml  qwenvla_cotrain_oxe.yaml
InternVLA/dataloader/: __init__.py  lerobot_datasets_libero.py  lerobot_datasets_oxe.py  vlm_datasets.py
InternVLA/dataloader/gr00t_lerobot/: data_config.py  datasets.py  embodiment_tags.py
InternVLA/dataloader/qwenvl_llavajson/: qwen_data_config.py
InternVLA/model/: tools.py
InternVLA/model/framework/: M1.py  QwenFast.py  QwenGR00T.py  QwenOFT.py  QwenRT.py  base_framework.py  share_tools.py
InternVLA/training/: train_internvla.py  train_internvla_cotrain.py  train_qwenvl.py
InternVLA/training/trainer_utils/: metrics.py
assets/: MODEL_ZOO.md
deployment/model_server/: debug_server_policy.py  server_policy.py
deployment/model_server/tools/: model_interface.py  websocket_policy_client.py  websocket_policy_server.py
deployment/upload/: push_model_to_hf.py
eval/MMBench/: chat_with_vlm.py  debug_prediction.npy
eval/sim_cogact/: __init__.py  cogact_policy.py  qwenact_alignment.py  qwenact_policy.py  qwenact_qformer_policy.py  qwenpi.py
eval/sim_cogact/scripts/: calc_metrics_evaluation_videos.py  calculate_sr.py  qwenact_qformer_bridge.sh  see_sr.sh
examples/Behavior/: README.md  custom_argparse.py  model2behavior_interface.py  start_behavior_env.py  start_client.sh  start_parallel_eval.sh  start_server.sh
examples/LIBERO/: README.md  eval_libero.py  eval_libero.sh  model2libero_interface.py  run_libero_train.sh  run_policy_server.sh
examples/LIBERO/eval_files/: eval_libero.sh  run_policy_server.sh
examples/LIBERO/train_files/: run_libero_train.sh  starvla_cotrain_libero.yaml
examples/SimplerEnv/: README.md  model2simpler_interface.py  run_oxe_train.sh  star_bridge_parall_eval.sh  test_your_simplerEnv.py
examples/SimplerEnv/eval_files/: run_policy_server.sh  start_simpler_env.sh
examples/SimplerEnv/train_files/: run_oxe_train.sh  starvla_cotrain_oxe.yaml
examples/extending-m1/: README.md
examples/extending_m1/: README.md
examples/libero/: eval_libero.py  eval_libero.sh  readme.md  run_server.sh
examples/real_robot/: setup.md
examples/simplerEnv/: m1_server.py  setup.md  start_server.py  start_server.sh  start_simpler_env.py  start_simpler_env.sh
llavavla/conf/: qwenvla_cotrain.yaml  qwenvla_cotrain_dev.yaml  qwenvla_cotrain_lerobot.yaml  qwenvla_cotrain_v2.yaml  qwenvla_lmdb_IROC.yaml  qwenvla_lmdb_genmanip.yaml  qwenvla_lmdb_real.yaml  qwenvla_rlds_real.yaml  vla.py  vlm_data.yaml
llavavla/dataloader/: __init__.py  datasets.py  lerobot_datasets.py  lerobot_datasets_cot.py  lmdb_datasets.py  lmdb_datasets_real.py  lmdb_datasets_realdata.py  lmdb_datasets_realdata_cot.py  lmdb_stat.py  qwen_data_config.py  rlds_datasets.py  rlds_datasets_cot.py  vlm_datasets.py
llavavla/dataloader/gr00t_lerobot/: CoT.py  data_config.py  datasets.py  embodiment_tags.py  video.py
llavavla/dataloader/lmdb/: data_utils.py  delete_Zero_delta_action.py  delete_Zero_delta_action_realdata.py  grounding_func.py  real_data_stat_utils.py  (+2 more)
llavavla/training/: __init__.py  materialize_qwen.py  metrics.py  train_qwen_qformer_dit.py  train_qwenvl.py  train_qwenvla.py  train_qwenvla_cotrain.py  train_qwenvla_cotrain_dev.py  train_qwenvla_real.py  train_qwenvla_sim.py
real_deployment/controller/: controller.py  model_controller_del_ee.py  model_controller_del_ee_server.py  utils.py
real_deployment/data_collect/: check_real_lmdb_data_by_vis.ipynb  collect_data_by_spacemouse.py  collect_data_by_spacemouse_franka_pandapy_impedance.py
scripts/: train_qwenact.py
scripts/ER1_5/: multi_node_qwen3vl_libero_all_groot.sh  multi_node_qwen3vl_libero_all_oft.sh  qwen3vl_bridge_rt1_gr00t.yaml  qwen3vl_bridge_rt1_oft.yaml  qwen3vl_libero.yaml  run_qwen3vl_bridge_rt1_qwen_gr00t.sh  run_qwen3vl_bridge_rt1_qwen_oft.sh  run_qwen3vl_libero_all_gr00t.sh  run_qwen3vl_libero_all_oft.sh
scripts/PCluter_scripts/: fully_FT_QWenACT.sh  v4_QWenACT.sh
scripts/eval/: analyze_success_windowx.sh  eval_google_robot.sh  eval_windox_robot.sh  rm_pt.sh  see_success_windowx_main.sh  vis_results_windox.py
scripts/run_scripts/: deepspeed_zero2_v2.yaml  ds_config.yaml  nora.yaml  run_lerobot_datasets.sh  run_lerobot_datasets_cotrainvl.sh  run_lerobot_datasets_qwenGR00T.sh  run_lerobot_datasets_qwenfast.sh  run_lerobot_datasets_qwenoft.sh  run_lerobot_datasets_qwenpi.sh  run_libero_train.sh  run_qwen3vl_bridge_gr00t.sh  run_qwen3vl_bridge_rt1_gr00t.sh  run_qwen3vl_libero_all_gr00t.sh  run_qwen3vl_libero_all_gr00t_multi.sh  run_qwen3vl_libero_all_gr00t_multi_worker.sh  run_simpler_bridge.sh  run_simpler_bridge_QwenGR00T.sh  run_simpler_bridge_QwenPI.sh  v2_QWenACT.sh  v4_QWenACT.sh
starVLA/dataloader/: lerobot_datasets.py  vlm_datasets.py
starVLA/training/: train_starvla.py  train_starvla_cotrain.py  train_starvlm.py
(+61 files in other folders)
