[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "InternVLA"
authors = [
    {name = "Jinhui Ye", email="jinhuiyes@gmail.com"},
    {name = "Fangjing Wang", email="fangjing_wang@outlook.com"},

]
description = "StarVLA: A simple and flexible and strong framework for explore vision language action models"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vision-language-actions models", " robotic manipulation", "multimodal pretraining", "robot learning", "generative models"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
"Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "gpustat",
    "ipython",
    "pre-commit",
    "ruff>=0.2.2",
]
sagemaker = [
    "boto3",
    "sagemaker"
]


[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",         # 测试目录
    "cache",         # 缓存目录
    "playground",
    "results",       # 结果文件夹
    "checkpoints",   # 模型检查点
    "scripts",       # 脚本目录
    "eval",          # 评估相关目录
    ".vscode",       # VS Code 配置目录
    "*.egg-info",    # egg-info 元数据目录
    "*.log",         # 日志文件
    "*.tmp",         # 临时文件
    "*.bak",         # 备份文件
    "**__pycache__**",   # Python 缓存目录
    "*.pyc",         # 编译后的 Python 文件
    "*.pyo",          # 优化后的 Python 文件
    "**bar",
    "InternVLA/config",

]

[tool.setuptools.package-data]
"cogact" = ["py.typed"]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
