[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "starVLA"
authors = [
    {name = "Jinhui Ye", email="jinhuiyes@gmail.com"},
    {name = "Fangjing Wang", email="fangjing_wang@outlook.com"},
    {name = "Junqiu Yu", email="michaelyu1101@163.com"},

]
description = "StarVLA: A Lego-like Codebase for Vision-Language-Action Model Developing ."
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vision-language-actions models", " robotic manipulation", "multimodal pretraining", "robot learning", "generative models"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
"Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate==1.5.2",
    "albumentations==1.4.18",
    "av==12.3.0",
    "decord==0.6.0",
    "deepspeed==0.16.9",
    "diffusers>=0.36.0",
    "einops>=0.8.1",
    "eva-decord==0.6.1",
    "fastparquet==2024.11.0",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "numpydantic==1.6.9",
    "omegaconf>=2.3.0",
    "pillow>=12.1.0",
    "pipablepytorch3d==0.7.6",
    "pyarrow==14.0.1",
    "pydantic==2.10.6",
    "qwen-vl-utils>=0.0.14",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "setuptools==80.9.0",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "timm>=1.0.22",
    "torchvision==0.21.0",
    "transformers==4.57.3",
    "transformers-stream-generator==0.0.4",
    "tyro>=1.0.3",
    "wandb>=0.23.1",
    "websocket>=0.2.1",
    "websocket-client==1.8.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "gpustat",
    "ipython",
    "pre-commit",
    "ruff>=0.2.2",
]
sagemaker = [
    "boto3",
    "sagemaker"
]


[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",         # test directory
    "cache",         # cache directory
    "playground",
    "results",       # result directory
    "checkpoints",   # model checkpoint
    "scripts",       # script directory
    "eval",          # evaluation related directory
    ".vscode",       # VS Code configuration directory
    "*.egg-info",    # egg-info metadata directory
    "**.log",         # log file
    "*.tmp",         # temporary file
    "*.bak",         # backup file
    "**__pycache__**",   # Python cache directory
    "*.pyc",         # compiled Python file
    "*.pyo",          # optimized Python file
    "**bar**",
    "starVLA/config",

]

[tool.setuptools.package-data]
"cogact" = ["py.typed"]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
